--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb 25 21:23:06 1999  Jason Merrill  <jason@yorick.cygnus.com>
+
+	* dwarf2out.c (scope_die_for): Set scope_die to comp_unit_die
+	rather than asserting it.
+
 Thu Feb 25 23:33:06 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* cppexp.c (left_shift, right_shift, parse_charconst, COMPARE,
@@ -333,7 +338,6 @@ Fri Feb 19 18:18:56 1999  Don Bowman  <don@pixstream.com>
 	* configure.in (mips*-*-vxworks*): Enable gthreads vxworks support.
 	* configure: Rebuilt.
 
->>>>>>> 1.3049
 Sun Feb 21 20:34:44 PST 1999 Jeff Law  (law@cygnus.com)
 
 	* version.c: Bump for snapshot.
