--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb 25 21:32:34 1999  Jason Merrill  <jason@yorick.cygnus.com>
+
+	* fixinc.wrap: Also handle struct queue in sys/stream.h.
+	* fixinc.svr4: Likewise.
+
 Thu Feb 25 21:23:06 1999  Jason Merrill  <jason@yorick.cygnus.com>
 
 	* dwarf2out.c (scope_die_for): Set scope_die to comp_unit_die
