--- a/egcs_1_1_branch/gcc/ChangeLog
+++ b/egcs_1_1_branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Feb 26 01:47:46 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* Makefile.in (compare, gnucompare): We do not care about
+	comparison failures for objc/linking.o either.
+
 Wed Feb 24 23:17:41 1999  Jeffrey A Law  (law@cygnus.com)
 
 	Thu Feb 18 19:59:37 1999  Marc Espie <espie@cvs.openbsd.org>
