doc fix for DATE_AND_TIME
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25464 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/f/ChangeLog
+++ b/egcs_1_1_branch/gcc/f/ChangeLog
@@ -1,5 +1,10 @@
 1999-02-26  Craig Burley  <craig@jcb-sc.com>
 
+	* intdoc.in (DATE_AND_TIME): Explain that VALUES(7) holds
+	seconds, and VALUES(8), therefore, the milliseconds.
+
+1999-02-26  Craig Burley  <craig@jcb-sc.com>
+
 	* bugs.texi: Mention bugs known fixed in egcs 1.2 as of now.
 
 1999-02-26  Craig Burley  <craig@jcb-sc.com>
