--- a/egcs_1_1_branch/gcc/f/ChangeLog
+++ b/egcs_1_1_branch/gcc/f/ChangeLog
@@ -1,5 +1,16 @@
 1999-02-26  Craig Burley  <craig@jcb-sc.com>
 
+	* news.texi: List fixes to Date_and_Time and LStat, plus
+	the docs, under a new heading for egcs 1.1.2.
+
+1999-02-26  Craig Burley  <craig@jcb-sc.com>
+
+	* intdoc.in (STAT_func, STAT_subr,
+	FSTAT_func, FSTAT_subr, LSTAT_func, LSTAT_subr):
+	Properly order array elements.  Specify N/A return values.
+
+1999-02-26  Craig Burley  <craig@jcb-sc.com>
+
 	* intdoc.in (DATE_AND_TIME): Explain that VALUES(7) holds
 	seconds, and VALUES(8), therefore, the milliseconds.
 
