--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -3,6 +3,8 @@ Fri Feb 26 15:33:45 1999  Richard Henderson  <rth@cygnus.com>
 	* genattrtab.c (simplify_knowing): Fix uninitialized read
 	in Feb 21 change.
 
+	* genextract.c (main): Clear recog_operands before extracting.
+
 Fri Feb 26 02:24:57 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* c-pragma.c (add_weak); Delete.  Moved into...
