* SERVICE: Update from the FSF.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25481 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Feb 27 19:18:24 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* SERVICE: Update from the FSF.
+
 Sat Feb 27 01:12:40 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* md.texi (prologue,epilogue): Document named patterns.
