--- a/egcs_1_1_branch/gcc/ChangeLog
+++ b/egcs_1_1_branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Feb 27 19:19:36 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* SERVICE: Update from the FSF.
+
 Fri Feb 26 19:31:25 1999  Dave Love  <fx@gnu.org>
 
 	* md.texi, invoke.texi: Fix unterminated @xrefs.
