* alias.c (true_dependence): Only apply MEM_IN_STRUCT_P tests         when flag_structure_noalias is set.         * toplev.c (flag_structure_noalias): New variable.         (f_options): Add -fstructure-noalias.         * flags.h (flag_structure_noalias): Declare.         * invoke.texi: Update documentation.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25483 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/invoke.texi
+++ b/egcs_1_1_branch/gcc/invoke.texi
@@ -158,6 +158,7 @@ in the following sections.
 -fschedule-insns2  -fstrength-reduce  -fthread-jumps
 -funroll-all-loops  -funroll-loops
 -fmove-all-movables  -freduce-all-givs -fstrict-aliasing
+-fstructure-noalias
 -O  -O0  -O1  -O2  -O3 -Os
 @end smallexample
 
@@ -2501,6 +2502,17 @@ allowed to alias.  For an example, see the C front-end function
 @code{c_get_alias_set}.
 @end ifset
 
+@item -fstructure-noalias
+Allows the compiler to assume that structure / varying array references
+do not alias fixed scalars.
+
+Although this optimization is safe, GCC can occasionally lose track
+of which references refer to scalars and which to structures,
+leading it to perform unsafe transformations.  Release 1.2 of EGCS
+will incorporate changes which allow GCC to track the
+scalar/structure distinction safely.  Thus, the optimization will
+always be same, and this option will likely be removed or will have
+no effect.
 @end table
 
 @node Preprocessor Options
