--- a/egcs_1_1_branch/gcc/ChangeLog
+++ b/egcs_1_1_branch/gcc/ChangeLog
@@ -1,3 +1,14 @@
+Sat Feb 27 19:29:46 1999  Toon Moene  <toon@moene.indiv.nluug.nl>
+			  Mark Mitchell  <mark@markmitchell.com>
+			  Jeffrey A Law  (law@cygnus.com)
+
+	* alias.c (true_dependence): Only apply MEM_IN_STRUCT_P tests
+	when flag_structure_noalias is set.
+	* toplev.c (flag_structure_noalias): New variable.
+	(f_options): Add -fstructure-noalias.
+	* flags.h (flag_structure_noalias): Declare.
+	* invoke.texi: Update documentation.
+
 Sat Feb 27 19:19:36 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* SERVICE: Update from the FSF.
