* config/t-openbsd (T_CFLAGS): Add -Dmkstemps=my_mkstemps. Revolting patch for the branch only.  Don't ever consider adding it to the mainline.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25485 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/ChangeLog
+++ b/egcs_1_1_branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Feb 27 19:47:39 1999  Marc Espie <espie@openbsd.org>
+
+	* config/t-openbsd (T_CFLAGS): Add -Dmkstemps=my_mkstemps.
+
 Sat Feb 27 19:37:04 1999  Arturo Montes  <mitosys@colomsat.com.co>
 
 	* i386/t-sco5 (crti.o): New target.
