--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sat Feb 27 23:21:47 1999  Jerry Quinn <jquinn@nortelnetworks.com>
+			  Mike Stump <mrs@wrs.com>
+
+	* pa.h (REG_ALLOC_ORDER): Change order to allocate left half of
+	float regs before right half of float regs.
+
 Sat Feb 27 22:48:38 1999  H.J. Lu  (hjl@gnu.org)
 			  Jeffrey A Law  (law@cygnus.com)
 
