* pa.c (override_options): Change default to 7100LC
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25493 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,6 +1,8 @@
 Sat Feb 27 23:21:47 1999  Jerry Quinn <jquinn@nortelnetworks.com>
 			  Mike Stump <mrs@wrs.com>
 
+	* pa.c (override_options): Change default to 7100LC
+
 	* pa.h (REG_ALLOC_ORDER): Change order to allocate left half of
 	float regs before right half of float regs.
 
