* invoke.texi: Update information for PA scheduling.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25494 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb 28 02:00:38 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* invoke.texi: Update information for PA scheduling.
+
 Sat Feb 27 23:21:47 1999  Jerry Quinn <jquinn@nortelnetworks.com>
 			  Mike Stump <mrs@wrs.com>
 
