--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb 28 02:20:00 1999  Geoffrey Noer  <noer@cygnus.com>
+
+	* config.sub: Check for "cygwin*" rather than "cygwin32*"
+
 1999-02-24  Nick Clifton  <nickc@cygnus.com>
 
 	* config.sub: Fix typo in arm recognition.
