--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -32,6 +32,13 @@ Sat Feb 27 19:18:24 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* SERVICE: Update from the FSF.
 
+Sat Feb 27 14:31:22 1999  Arturo Montes  <mitosys@colomsat.com.co>
+
+        * config/i386/t-sco5 (crti.o): New target.
+        * config/i386/sco5.h (STARTFILE_SPEC): Include crti.o when 
+        linking -shared.
+        * configure.in (i[34567]86-*-sco3.2v5*): Add crti.o.
+
 Sat Feb 27 01:12:40 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* md.texi (prologue,epilogue): Document named patterns.
