* sparc.md (blockage, nonlocal_goto_receiver): Set length to 0.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25509 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb 28 15:57:06 1999  Richard Henderson  <rth@cygnus.com>
+
+	* sparc.md (blockage, nonlocal_goto_receiver): Set length to 0.
+
 Sun Feb 28 14:47:53 1999  Arturo Montes  <mitosys@colomsat.com.co>
 
         * config/i386/t-sco5gas (crti.o): New target.
