From Toshiyasu Morita: 	* sh.h (CACHE_LOG): SH2 has cache, too.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25515 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar  1 21:44:30 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	From Toshiyasu Morita:
+	* sh.h (CACHE_LOG): SH2 has cache, too.
+
 Mon Mar  1 14:23:36 1999  Catherine Moore  <clm@cygnus.com>
  
         * toplev.c (compile_file):  Disable -ffunction-sections and
