--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar  1 23:29:14 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* g++.old-deja/g++.law/weak1.C: New test.
+
 1999-02-28 17:59 -0500  Zack Weinberg  <zack@rabi.columbia.edu>
 
 	* gcc.c-torture/execute/990119-1.c: Renamed to...
