* extend.texi: Reference __extension__ in the index.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25523 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar  2 00:09:18 1999  Marc Espie <espie@cvs.openbsd.org>
+
+	* extend.texi: Reference __extension__ in the index.
+
 Mon Mar  1 19:09:32 1999  Jim Wilson  <wilson@cygnus.com>
 
 	* Makefile.in (CROSS_FLOAT_H): Delete.
