--- a/gcc/extend.texi
+++ b/gcc/extend.texi
@@ -2835,6 +2835,7 @@ macros to replace them with the customary keywords.  It looks like this:
 #endif
 @end example
 
+@findex __extension__
 @samp{-pedantic} causes warnings for many GNU C extensions.  You can
 prevent such warnings within one expression by writing
 @code{__extension__} before the expression.  @code{__extension__} has no
