* final.c (end_final): There are 11 words in the "main header"         structure, not 10.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25524 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar  2 01:07:12 1999  Dan Nicolaescu  <dann@godzilla.ics.uci.edu>
+
+	* final.c (end_final): There are 11 words in the "main header"
+	structure, not 10.
+
 Tue Mar  2 00:09:18 1999  Marc Espie <espie@cvs.openbsd.org>
 
 	* extend.texi: Reference __extension__ in the index.
